RESOLVED FIXED172090
Fix unused lambdas in WebKit2
https://bugs.webkit.org/show_bug.cgi?id=172090
Summary Fix unused lambdas in WebKit2
David Kilzer (:ddkilzer)
Reported 2017-05-13 22:08:37 PDT
<https://webkit.org/b/000000> Reviewed by NOBODY (OOPS!). Fixes unused lambda warnings found with newer clang. * NetworkProcess/cache/NetworkCache.cpp: (WebKit::NetworkCache::Cache::retrieve): * NetworkProcess/cache/NetworkCacheStatistics.cpp: (WebKit::NetworkCache::Statistics::initialize): - Use UNUSED_PARAM() to silence unused lambda warning since 'startTime' is used in Debug builds. * NetworkProcess/capture/NetworkCaptureManager.cpp: (WebKit::NetworkCapture::Manager::fuzzyMatchURLs): - Remove unused 'this' from lambda capture. * NetworkProcess/cocoa/NetworkSessionCocoa.mm: (-[WKNetworkSessionDelegate URLSession:task:willPerformHTTPRedirection:newRequest:completionHandler:]): (-[WKNetworkSessionDelegate URLSession:task:_schemeUpgraded:completionHandler:]): (-[WKNetworkSessionDelegate URLSession:task:didReceiveChallenge:completionHandler:]): (-[WKNetworkSessionDelegate URLSession:dataTask:didReceiveResponse:completionHandler:]): - Use UNUSED_PARAM() to silence unused lambda warning since 'taskIdentifier' is used in Debug builds. * UIProcess/WebResourceLoadStatisticsStore.cpp: (WebKit::WebResourceLoadStatisticsStore::registerSharedResourceLoadObserver): (WebKit::WebResourceLoadStatisticsStore::applicationWillTerminate): - Remove unused 'this' from lambda captures. * UIProcess/WebsiteData/WebsiteDataStore.cpp: (WebKit::WebsiteDataStore::fetchData): - Remove unused 'fetchOptions' from lambda capture. (WebKit::WebsiteDataStore::fetchDataForTopPrivatelyControlledDomains): - Remove unused 'this' from lambda capture. * UIProcess/mac/ViewGestureControllerMac.mm: (WebKit::ViewGestureController::forceRepaintIfNeeded): - Remove unused 'this' from lambda capture. * WebProcess/cocoa/WebVideoFullscreenManager.mm: (WebKit::WebVideoFullscreenManager::didExitFullscreen): - Remove unused 'this' from nested lambda captures. --- 9 files changed, 79 insertions(+), 10 deletions(-)
Attachments
Patch (15.37 KB, patch)
2017-05-13 22:08 PDT, David Kilzer (:ddkilzer)
no flags
David Kilzer (:ddkilzer)
Comment 1 2017-05-13 22:08:38 PDT
WebKit Commit Bot
Comment 2 2017-05-14 03:41:44 PDT
Comment on attachment 310066 [details] Patch Clearing flags on attachment: 310066 Committed r216841: <http://trac.webkit.org/changeset/216841>
WebKit Commit Bot
Comment 3 2017-05-14 03:41:45 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.