Source/WebKit2/WebProcess/cocoa/WebVideoFullscreenManager.mm
@@ -369,10 +369,10 @@ void WebVideoFullscreenManager::didExitFullscreen(uint64_t contextId)
     std::tie(model, interface) = ensureModelAndInterface(contextId);
     RefPtr<WebVideoFullscreenManager> strongThis(this);
     
-    model->waitForPreparedForInlineThen([strongThis, this, contextId, interface, model] {
-        dispatch_async(dispatch_get_main_queue(), [strongThis, this, contextId, interface, model] {
-            model->setVideoFullscreenLayer(nil, [strongThis, this, contextId, interface] {
-                dispatch_async(dispatch_get_main_queue(), [strongThis, this, contextId, interface] {
+    model->waitForPreparedForInlineThen([strongThis, contextId, interface, model] {
+        dispatch_async(dispatch_get_main_queue(), [strongThis, contextId, interface, model] {
+            model->setVideoFullscreenLayer(nil, [strongThis, contextId, interface] {
+                dispatch_async(dispatch_get_main_queue(), [strongThis, contextId, interface] {
                     if (interface->layerHostingContext()) {
                         interface->layerHostingContext()->setRootLayer(nullptr);
                         interface->setLayerHostingContext(nullptr);
